--- a/Godot/.godot/editor/editor_layout.cfg
+++ b/Godot/.godot/editor/editor_layout.cfg
@@ -11,6 +11,7 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-280
 dock_hsplit_4=0
+dock_9_selected_tab_idx=1
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -23,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://assets/Models/GLB format/detail-parasol-a.glb")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Models/", "res://assets/Models/GLB format/")
+selected_paths=PackedStringArray("res://scenes/City.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Models/GLB format/")
 
 [docks/History]
 
@@ -43,7 +44,7 @@ bottom_panel_offsets={
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -53,8 +54,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scenes/caller.gd", "res://receiver.gd", "res://scenes/receiver.gd"]
+selected_script="res://scenes/receiver.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -62,8 +63,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(698, 382, 1164, 668)
+floating_window_screen=0
 
 [ShaderEditor]
 
